--- a/src/app/views/calendario/calendario.component.scss
+++ b/src/app/views/calendario/calendario.component.scss
@@ -10,3 +10,13 @@
 mat-toolbar > *{
   margin-left: 1em;
 }
+
+.day-full{
+  background-color: #f44336
+}
+.day-free{
+  background-color: #66bb6a
+}
+.day-disabled{
+  background-color: #bdbdbd
+}
