--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -4,7 +4,7 @@
     <h1>citame.click</h1>
   </header>
 
-  <div fxFlex="50%" fxFlex.xs="100%">
+  <div fxFlex="50%" fxFlex.xs="100%" fxLayoutAlign="center">
 
     <!-- 0: default view -->
     <mat-card fxFlexFill *ngIf="state==0">
