--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -9,7 +9,10 @@
     <!-- 0: default view -->
     <mat-card fxFlexFill *ngIf="state==0">
       <mat-card-header fxLayoutAlign="center center">
-        <mat-card-title><p>Identifícate...</p></mat-card-title>
+        <mat-card-title>
+          <p *ngIf="!error">Identifícate...</p>
+          <p *ngIf="error">{{error}}</p>
+        </mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
@@ -80,6 +83,46 @@
 
         </form>
       </mat-card-content>
+    </mat-card>
+
+    <!-- 2: user register -->
+    <mat-card fxFlexFill class="login-email" *ngIf="state==2">
+
+        <mat-card-header fxLayoutAlign="start center">
+          <button mat-icon-button (click)="state=0">
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-card-header>
+
+        <mat-card-content>
+          <form [formGroup]="registerForm"
+                (ngSubmit)="onRegisterSubmit(registerForm.value)"
+                 fxLayout="column"
+                 fxLayoutGap="2em"
+                 class="login-form">
+               <mat-form-field>
+                  <input class="login-email-input" matInput placeholder="tu email" [formControl]="registerForm.controls['email']">
+                  <mat-error *ngIf="!registerForm.controls['email'].valid">Revisa el email</mat-error>
+                </mat-form-field>
+              <mat-form-field>
+                 <input class="login-email-input" matInput placeholder="tu teléfono" [formControl]="registerForm.controls['tfno']">
+                 <mat-error *ngIf="!registerForm.controls['tfno'].valid">Revisa el número de teléfono</mat-error>
+               </mat-form-field>
+
+               <mat-form-field *ngIf="registerForm.controls['password'].value!='firebase'">
+                  <input class="login-password-input" matInput placeholder="elige una contraseña" [formControl]="registerForm.controls['password']">
+                  <mat-error *ngIf="!registerForm.controls['password'].valid">Debe tener, al menos, 8 caracteres</mat-error>
+                </mat-form-field>
+              <mat-form-field>
+                 <input class="login-email-input" matInput placeholder="¿Cómo te llamas?" [formControl]="registerForm.controls['nombre']">
+                 <mat-error *ngIf="!registerForm.controls['nombre'].valid">revisa el nombre</mat-error>
+               </mat-form-field>
+
+               <div fxLayout="row" fxLayoutAlign="end center">
+                 <button type="submit" mat-icon-button><mat-icon>send</mat-icon></button>
+               </div>
+              </form>
+        </mat-card-content>
     </mat-card>
 
   </div>
