--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -81,6 +81,9 @@
                 <a (click)="remindPassword()" class="reminder-link">No recuerdo mi contraseña</a>
               </div>
 
+              <div fxLayout="row" fxLayoutAlign="center bottom">
+                <a (click)="state=2" class="reminder-link">No tengo usuari@</a>
+              </div>
         </form>
       </mat-card-content>
     </mat-card>
