--- a/src/app/views/topbar/topbar.component.html
+++ b/src/app/views/topbar/topbar.component.html
@@ -5,7 +5,7 @@
 
   <span class="spacer"></span>
   <div *ngIf="user$ | async as user">
-    <span class="user-name"
+    <span class="user-name clickable"
       [routerLink]="['/paciente']" queryParamsHandling="preserve">{{user.nombre}}</span>
     <button mat-icon-button class="btn-logout" (click)="logout()"><i class="material-icons">power_settings_new</i></button>
   </div>
