--- a/src/app/views/topbar/logout-dialog.html
+++ b/src/app/views/topbar/logout-dialog.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>Logout</h2>
-<mat-dialog-content>Estás apunto de cerrar la sesión</mat-dialog-content>
+<h2 mat-dialog-title>Hasta pronto</h2>
+<mat-dialog-content>Vas a cerrar la sesión</mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancelar</button>
   <button mat-button [mat-dialog-close]="true">OK</button>
