--- a/src/app/views/calendario/calendario.component.scss
+++ b/src/app/views/calendario/calendario.component.scss
@@ -25,3 +25,29 @@ mat-toolbar {
   height: 100%;
   background-color: #bdbdbd
 }
+
+.cal-event{
+  .app-event-title{
+    font-weight: 700;
+    font-size: 120%;
+  }
+  .app-event-buttons{
+    position: absolute;
+    top: 0.1em;
+    right: 0.1em;
+
+    button{
+      float: right;
+      margin: 0; padding: 0;
+      width: 20px; height: 20px;
+    }
+  }
+}
+
+.app-syncing{
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  z-index: 200;
+  background-color: rgba(255,255,255,0.5);
+}
