restyling for phone, removed logout dialog

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,5 +2,12 @@ $primary: #FF1744;
 $secondary: #ADADAD;
 $none: white;
 $light: #e0e0e0;
+$blue: #00f;
+
 
 $font-primary: "Open Sans";
+
+$size-xs: 10px;
+$size-s: 12px;
+$size-l: 14px;
+$size-xl: 2*16px;
