--- a/src/app/views/paciente/paciente.component.html
+++ b/src/app/views/paciente/paciente.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar fxLayout>
+<mat-toolbar fxLayout class="app-window-topbar">
   <button mat-icon-button (click)="close()"><i class="material-icons">close</i></button>
   <h1>Paciente</h1>
   <span class="spacer"></span>
