--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,10 +4,12 @@ $none: white;
 $light: #e0e0e0;
 $blue: #00f;
 
-
 $font-primary: "Open Sans";
 
 $size-xs: 10px;
 $size-s: 12px;
 $size-l: 14px;
 $size-xl: 2*16px;
+
+$icon-small-container-size: 28px;
+$icon-small-size: 14px;
