--- a/src/app/views/calendario/calendario.component.scss
+++ b/src/app/views/calendario/calendario.component.scss
@@ -16,7 +16,10 @@ mat-toolbar {
     padding: 0 !important;
   }
 }
-
+.select-view{
+  margin-left: 0.5em;
+  max-width: 6em;
+}
 .calendar-day-full{
   height: 100%;
   background-color: #f44336
