quick delete view

--- a/src/app/views/calendario/calendario.component.scss
+++ b/src/app/views/calendario/calendario.component.scss
@@ -33,12 +33,15 @@ mat-toolbar {
   background-color: #bdbdbd
 }
 
+
 .cal-event{
+  color: $dark !important;
   .app-event-title{
     font-weight: 700;
     font-size: 120%;
   }
   .app-event-buttons{
+    color: black !important;
     position: absolute;
     top: 0.1em;
     right: 0.1em;
