--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,9 @@ button i.fa{
 .app-name{
   margin-left: 1em !important;
 }
+.user-name{
+  font-size: $size-l;
+}
 .cal-today {
     background-color: red !important;
     color: white !important;
