unit tests passed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 body{
   background-color: white;
   font-family: Open Sans !important;
-  margin: 0 !important;
+  margin: 8px !important;
 }
 mat-toolbar{
   background-color: white !important;
