--- a/src/app/views/calendario/calendario.component.scss
+++ b/src/app/views/calendario/calendario.component.scss
@@ -1,5 +1,10 @@
 @import "../../../_variables.scss";
-
+.error-message{
+    display: flex;
+    width: 100%;
+    align-content: center;
+    justify-content: center;
+}
 .toolbar-date-title::first-letter{
   text-transform: capitalize;
 }
